lp/mongodb/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-express
  namespace: mongodb
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: mongodb
  labels:
    name: mongo-express
spec:
  type: ClusterIP
  ports:
    - port: 8081
      name: http
  selector:
    app: mongo-express
